[workspace]
members = [
    "programs/catalyst_guard",
    "crates/drift_cpi",
    "services/keeper",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.31.1"
solana-program = "2.2"
borsh = "0.10"
sha2 = "0.10"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
