[package]
name = "test_oracle"
version = "0.1.0"
description = "Minimal oracle program for localnet/integration tests"
edition = "2021"
license = "BUSL-1.1"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_oracle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }

