[package]
name = "compliance"
version = "0.2.0"
edition = "2021"
description = "CatalystGuard Compliance Service – DFlow Proof KYC + geo-blocking stubs"
license = "BUSL-1.1"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
