[package]
name = "keeper"
version = "0.2.0"
edition = "2021"
description = "CatalystGuard Keeper Service – monitors tickets and executes them when conditions are met"
license = "BUSL-1.1"

[dependencies]
anchor-client = "0.31.1"
solana-sdk = "2.2"
solana-client = "2.2"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
