[package]
name = "keeper"
version = "0.3.0"
edition = "2021"
description = "CatalystGuard Keeper Service – monitors tickets and executes them when conditions are met"
license = "BUSL-1.1"

[dependencies]
borsh = "0.10.4"
drift_cpi = { path = "../../crates/drift_cpi" }
solana-sdk = "2.2"
bincode = "1.3"
sha2 = "0.10"
tokio = { version = "1", features = ["full", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
axum = "0.8"
